--- a/css/member_manage.css
+++ b/css/member_manage.css
@@ -36,5 +36,11 @@
 .list_btn{text-align: center;}
 .set_div p{margin:10px;}
 .page .border.border_color{border:1px solid #ccc;}
-.delete{color:#ff3535;}
+.delete{color:#ff3535;display:none;}
 .a_name{color:#6c6c6c;}
+
+
+
+
+/*管理员点击修改后添加的样式*/
+.identity{display:none;}
